Register Improved.Listview added in topratedfilms

--- a/templates/films/editFilm.html
+++ b/templates/films/editFilm.html
@@ -53,7 +53,7 @@
 				<tr>
 					<th>Rating Search</td><!-- option button -->
 					<td><input type="text" name="TextSearchValueR"></input></td>
-					<td><button name="SearchBut" type="submit" value="Rating">Search!</button></td>
+					<td><button name="SearchBut" type="submit" value="Rating">Find and Edit!</button></td>
 				</tr>
 			</table>
 		</form>
