add film using form.back button between pages.

--- a/templates/films/addFilm.html
+++ b/templates/films/addFilm.html
@@ -1,3 +1,4 @@
+<!-- add film html form version - usual way -->
 <style>
 	
 	table{ margin-right: auto; margin-left: auto; border: 1px solid black; border-collapse: collapse; }
