--- a/templates/films/seeDetails.html
+++ b/templates/films/seeDetails.html
@@ -15,7 +15,7 @@
 		font-style: bold;
 	}
 	.filmDetails{}
-	
+	#back { margin-right:455;}
 
 </style>
 
@@ -23,6 +23,7 @@
 
 {% block content %}
 <div class="filmDetails">
+	<a id="back" onClick="javascript:history.go(-1);">&lt;--Back</a>
 		<table>
 			<tr>
 				<th>NAME</th>
