--- a/templates/users/showUserInfo.html
+++ b/templates/users/showUserInfo.html
@@ -18,6 +18,7 @@
         text-align:center;
         background-color:yellow;
     }
+	#back { margin-right:455;}
 
 </style>
 
@@ -26,6 +27,7 @@
 {% block content %}
 
 <div class="UserInfoDiv">
+	<a id="back" onClick="javascript:history.go(-1);">&lt;--Back</a>
 	<h1>User Details</h1>
 
         <form action="" method="POST">
